--- a/app/globals.css
+++ b/app/globals.css
@@ -33,3 +33,7 @@ body {
   background: rgb(74, 62, 101);
   background: linear-gradient(180deg, rgba(74, 62, 101, 1) 0%, rgba(162, 46, 90, 1) 100%);
 }
+
+.modal {
+  background-color: rgba(74, 62, 101, 0.6);
+}
